
    2.12.2: In progress...

       NEW: Stereo option for UDP streaming.
       NEW: Script to generate AppImage.
     FIXED: FM de-emphasis causing audio to be 20 dB quieter than it should be.
     FIXED: FM de-emphasis applied incorrectly in WFM stereo receiver.
     FIXED: Update waterfall time resolution when FFT settings are changed.
     FIXED: Update waterfall time resolution when window is resized.
     FIXED: Restore waterfall time span between sessions.
     FIXED: FFT buffer overlap calculation.
     FIXED: Crash when launching without device connected.
     FIXED: Crash when setting invalid RF gains.
     FIXED: Audio panadapter / waterfall slider direction.
     FIXED: Clear FFT averages when changing FFT size.
     FIXED: Crash when source block doesn't support IQ balancing.
     FIXED: Bookmark labels in FFT draw over each other.
  IMPROVED: DSP and FFT performance.
  IMPROVED: Panadapter & waterfall performance.
  IMPROVED: Smooth panadapter & waterfall redrawing.
  IMPROVED: Better default values for various settings.
  IMPROVED: Audio waterfall colormap matches I/Q waterfall.
  IMPROVED: Use all available display space for panadapter & waterfall.
  IMPROVED: Updated RDS decoder.


    2.12.1: Released January 27, 2020

       NEW: White Hot, Black Hot and White Hot compressed colormaps.


      2.12: Released January 26, 2020

       NEW: GNU Radio 3.8 support.
       NEW: Mute button in audio panel.
       NEW: Google Turbo and Plasma color maps.
       NEW: Set/get device gains via remote control.
     FIXED: FFT display sometimes disappears.
     FIXED: Crash on startup when using HackRF.
     FIXED: dB scale disappears when zooming to 1 dB per grid line.
     FIXED: Raw I/Q output missing one channel.
     FIXED: Trap exceptions and show a message instead of crashing.
  IMPROVED: Prevent zooming out too far.
  IMPROVED: Make unlit digits slightly visible.
  IMPROVED: Only show sample rates supported by both models of BladeRF.

