@@ -110,6 +110,10 @@ void DockInputCtl::readSettings(QSettings * settings)
     bool_val = settings->value("gui/fctl_reset_digits", true).toBool();
     emit freqCtrlResetChanged(bool_val);
     ui->freqCtrlResetButton->setChecked(bool_val);
+
+    bool_val = settings->value("gui/invert_scrolling", false).toBool();
+    emit invertScrollingChanged(bool_val);
+    ui->invertScrollingButton->setChecked(bool_val);
 }
 
 void DockInputCtl::saveSettings(QSettings * settings)
@@ -171,6 +175,12 @@ void DockInputCtl::saveSettings(QSettings * settings)
         settings->setValue("gui/fctl_reset_digits", false);
     else
         settings->remove("gui/fctl_reset_digits");
+
+    // Remember state of invert scrolling button. Default is unchecked.
+    if (ui->invertScrollingButton->isChecked())
+        settings->setValue("gui/invert_scrolling", true);
+    else
+        settings->remove("gui/invert_scrolling");
 }
 
 void DockInputCtl::readLnbLoFromSettings(QSettings * settings)
@@ -347,6 +357,12 @@ void DockInputCtl::setFreqCtrlReset(bool enabled)
     ui->freqCtrlResetButton->setChecked(enabled);
 }
 
+/** Enable/disable invert scroll wheel direction */
+void DockInputCtl::setInvertScrolling(bool enabled)
+{
+    ui->invertScrollingButton->setChecked(enabled);
+}
+
 /**
  * Set gain stages.
  * @param gain_list A list containing the gain stages for this device.
@@ -500,6 +516,12 @@ void DockInputCtl::on_antSelector_currentIndexChanged(const QString &antenna)
 void DockInputCtl::on_freqCtrlResetButton_toggled(bool checked)
 {
     emit freqCtrlResetChanged(checked);
+}
+
+/** Invert scrolling box has changed */
+void DockInputCtl::on_invertScrollingButton_toggled(bool checked)
+{
+    emit invertScrollingChanged(checked);
 }
 
 /** Remove all widgets from the lists. */
