@@ -147,6 +147,7 @@ CPlotter::CPlotter(QWidget *parent) : QFrame(parent)
     m_FilterBoxEnabled = true;
     m_CenterLineEnabled = true;
     m_BookmarksEnabled = true;
+    m_InvertScrolling = false;
 
     m_Span = 96000;
     m_SampleFreq = 96000;
@@ -775,7 +776,8 @@ void CPlotter::zoomOnXAxis(float level)
 void CPlotter::wheelEvent(QWheelEvent * event)
 {
     QPoint pt = event->pos();
-    int numDegrees = event->delta() / 8;
+    int delta = m_InvertScrolling? -event->delta() : event->delta();
+    int numDegrees = delta / 8;
     int numSteps = numDegrees / 15;  /** FIXME: Only used for direction **/
 
     /** FIXME: zooming could use some optimisation **/
@@ -783,7 +785,7 @@ void CPlotter::wheelEvent(QWheelEvent * event)
     {
         // Vertical zoom. Wheel down: zoom out, wheel up: zoom in
         // During zoom we try to keep the point (dB or kHz) under the cursor fixed
-        float zoom_fac = event->delta() < 0 ? 1.1 : 0.9;
+        float zoom_fac = delta < 0 ? 1.1 : 0.9;
         float ratio = (float)pt.y() / (float)m_OverlayPixmap.height();
         float db_range = m_PandMaxdB - m_PandMindB;
         float y_range = (float)m_OverlayPixmap.height();
@@ -802,7 +804,7 @@ void CPlotter::wheelEvent(QWheelEvent * event)
     }
     else if (m_CursorCaptured == XAXIS)
     {
-        zoomStepX(event->delta() < 0 ? 1.1 : 0.9, pt.x());
+        zoomStepX(delta < 0 ? 1.1 : 0.9, pt.x());
     }
     else if (event->modifiers() & Qt::ControlModifier)
     {
