@@ -3,6 +3,7 @@
 
        NEW: Stereo option for UDP streaming.
        NEW: Script to generate AppImage.
+       NEW: Allow scroll wheel direction to be inverted.
      FIXED: FM de-emphasis causing audio to be 20 dB quieter than it should be.
      FIXED: FM de-emphasis applied incorrectly in WFM stereo receiver.
      FIXED: Update waterfall time resolution when FFT settings are changed.
